WIP: Moving the project forward to the most up to date libraries. Slowly improving the project to account for a lot of potential problems.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
 	<string name="scan">Scan</string>
 	<string name="rssi">RSSI</string>
 	<string name="tx_power">TX Power</string>
+	<string name="ok">Ok</string>
 	<string name="go_to_settings">Go to settings</string>
 	<string name="dismiss">Dismiss</string>
 
